<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imperial Message</string>
    <string name="setting">Settings</string>
    <string name="show">Show Access</string>
    
    <string name="three_remote">3 Numbers Required</string>
    <string name="least_five">at least 5 Characters Required</string>
    <string name="confirm">Confirm</string>
    
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="email">E-Mail</string>
    <string name="address">Address</string>
    
    <string name="grant">Grant Access</string>

</resources>
