<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geekstools.imperialmessage.GUI" >

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/name" >
    </EditText>
    
    <EditText
        android:id="@+id/number"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/number" >
    </EditText>
    
    <EditText
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/number"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" >
    </EditText>
    
    <EditText
        android:id="@+id/address"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email"
        android:ems="10"
        android:inputType="text|textCapSentences"
        android:hint="@string/address" >
    </EditText>

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/grant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:onClick="RUN"
        android:hint="@string/grant" />
    
</RelativeLayout>
