<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geekstools.imperialmessage.GUI"
    android:id="@+id/display"
    android:background="#00FF51" >

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/name"
        android:visibility="gone" >
    </EditText>
    
    <EditText
        android:id="@+id/number"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/number"
        android:visibility="gone" >
    </EditText>
    
    <EditText
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/number"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:visibility="gone" >
    </EditText>
    
    <EditText
        android:id="@+id/address"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/address"
        android:visibility="gone" >
    </EditText>

    <TextView
        android:id="@+id/tvname"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:background="@android:color/holo_red_light"
        android:hint="@string/name" >
    </TextView>
    
    <TextView
        android:id="@+id/tvnumber"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvname"
        android:ems="10"
        android:background="@android:color/holo_red_light"
        android:hint="@string/number" >
    </TextView>
    
    <TextView
        android:id="@+id/tvemail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvnumber"
        android:ems="10"
        android:background="@android:color/holo_red_light"
        android:hint="@string/email" >
    </TextView>
    
    <TextView
        android:id="@+id/tvaddress"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvemail"
        android:ems="10"
        android:background="@android:color/holo_red_light"
        android:hint="@string/address" >
    </TextView>
    
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/grant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:onClick="RUN"
        android:hint="@string/grant"
        android:visibility="gone" />
    
</RelativeLayout>
